%% lighthouse.sqlite — legacy SQLite-oriented ERD (historical).
%% For Azure SQL (intex2026DB + intex2026DBIdentity): intex2026DB-erd.mmd / intex2026DBIdentity-erd.mmd — python docs/erd/generate_azure_sqlserver_erd.py
%% PNG: npx -y @mermaid-js/mermaid-cli -i lighthouse.sqlite-erd.mmd -o lighthouse.sqlite-erd.png -b white -w 5200 -H 4000 -s 2
erDiagram
  donations ||--o{ donation_allocations : "donation_id"
  donations ||--o{ in_kind_donation_items : "donation_id"
  partners ||--o{ partner_assignments : "partner_id"
  residents ||--o{ education_records : "resident_id"
  residents ||--o{ health_wellbeing_records : "resident_id"
  residents ||--o{ home_visitations : "resident_id"
  residents ||--o{ incident_reports : "resident_id"
  residents ||--o{ intervention_plans : "resident_id"
  residents ||--o{ process_recordings : "resident_id"
  safehouses ||--o{ donation_allocations : "safehouse_id"
  safehouses ||--o{ incident_reports : "safehouse_id"
  safehouses ||--o{ partner_assignments : "safehouse_id"
  safehouses ||--o{ residents : "safehouse_id"
  safehouses ||--o{ safehouse_monthly_metrics : "safehouse_id"
  social_media_posts ||--o{ donations : "referral_post_id"
  supporters ||--o{ donations : "supporter_id"

  donation_allocations {
    text allocation_id PK
    text donation_id FK
    text safehouse_id FK
    text program_area
    text amount_allocated
    text allocation_date
    text allocation_notes
  }

  donations {
    text donation_id PK
    text supporter_id FK
    text donation_type
    text donation_date
    text is_recurring
    text campaign_name
    text channel_source
    text currency_code
    text amount
    text estimated_value
    text impact_unit
    text notes
    text referral_post_id FK
  }

  education_records {
    text education_record_id PK
    text resident_id FK
    text record_date
    text education_level
    text school_name
    text enrollment_status
    text attendance_rate
    text progress_percent
    text completion_status
    text notes
  }

  health_wellbeing_records {
    text health_record_id PK
    text resident_id FK
    text record_date
    text general_health_score
    text nutrition_score
    text sleep_quality_score
    text energy_level_score
    text height_cm
    text weight_kg
    text bmi
    text medical_checkup_done
    text dental_checkup_done
    text psychological_checkup_done
    text notes
  }

  home_visitations {
    text visitation_id PK
    text resident_id FK
    text visit_date
    text social_worker
    text visit_type
    text location_visited
    text family_members_present
    text purpose
    text observations
    text family_cooperation_level
    text safety_concerns_noted
    text follow_up_needed
    text follow_up_notes
    text visit_outcome
  }

  in_kind_donation_items {
    text item_id PK
    text donation_id FK
    text item_name
    text item_category
    text quantity
    text unit_of_measure
    text estimated_unit_value
    text intended_use
    text received_condition
  }

  incident_reports {
    text incident_id PK
    text resident_id FK
    text safehouse_id FK
    text incident_date
    text incident_type
    text severity
    text description
    text response_taken
    text resolved
    text resolution_date
    text reported_by
    text follow_up_required
  }

  intervention_plans {
    text plan_id PK
    text resident_id FK
    text plan_category
    text plan_description
    text services_provided
    text target_value
    text target_date
    text status
    text case_conference_date
    text created_at
    text updated_at
  }

  partner_assignments {
    text assignment_id PK
    text partner_id FK
    text safehouse_id FK
    text program_area
    text assignment_start
    text assignment_end
    text responsibility_notes
    text is_primary
    text status
  }

  partners {
    text partner_id PK
    text partner_name
    text partner_type
    text role_type
    text contact_name
    text email
    text phone
    text region
    text status
    text start_date
    text end_date
    text notes
  }

  process_recordings {
    text recording_id PK
    text resident_id FK
    text session_date
    text social_worker
    text session_type
    text session_duration_minutes
    text emotional_state_observed
    text emotional_state_end
    text session_narrative
    text interventions_applied
    text follow_up_actions
    text progress_noted
    text concerns_flagged
    text referral_made
    text notes_restricted
  }

  public_impact_snapshots {
    text snapshot_id PK
    text snapshot_date
    text headline
    text summary_text
    text metric_payload_json
    text is_published
    text published_at
  }

  residents {
    text resident_id PK
    text case_control_no
    text internal_code
    text safehouse_id FK
    text case_status
    text sex
    text date_of_birth
    text birth_status
    text place_of_birth
    text religion
    text case_category
    text sub_cat_orphaned
    text sub_cat_trafficked
    text sub_cat_child_labor
    text sub_cat_physical_abuse
    text sub_cat_sexual_abuse
    text sub_cat_osaec
    text sub_cat_cicl
    text sub_cat_at_risk
    text sub_cat_street_child
    text sub_cat_child_with_hiv
    text is_pwd
    text pwd_type
    text has_special_needs
    text special_needs_diagnosis
    text family_is_4ps
    text family_solo_parent
    text family_indigenous
    text family_parent_pwd
    text family_informal_settler
    text date_of_admission
    text age_upon_admission
    text present_age
    text length_of_stay
    text referral_source
    text referring_agency_person
    text date_colb_registered
    text date_colb_obtained
    text assigned_social_worker
    text initial_case_assessment
    text date_case_study_prepared
    text reintegration_type
    text reintegration_status
    text initial_risk_level
    text current_risk_level
    text date_enrolled
    text date_closed
    text created_at
    text notes_restricted
  }

  safehouse_monthly_metrics {
    text metric_id PK
    text safehouse_id FK
    text month_start
    text month_end
    text active_residents
    text avg_education_progress
    text avg_health_score
    text process_recording_count
    text home_visitation_count
    text incident_count
    text notes
  }

  safehouses {
    text safehouse_id PK
    text safehouse_code
    text name
    text region
    text city
    text province
    text country
    text open_date
    text status
    text capacity_girls
    text capacity_staff
    text current_occupancy
    text notes
  }

  social_media_posts {
    text post_id PK
    text platform
    text platform_post_id
    text post_url
    text created_at
    text day_of_week
    text post_hour
    text post_type
    text media_type
    text caption
    text hashtags
    text num_hashtags
    text mentions_count
    text has_call_to_action
    text call_to_action_type
    text content_topic
    text sentiment_tone
    text caption_length
    text features_resident_story
    text campaign_name
    text is_boosted
    text boost_budget_php
    text impressions
    text reach
    text likes
    text comments
    text shares
    text saves
    text click_throughs
    text video_views
    text engagement_rate
    text profile_visits
    text donation_referrals
    text estimated_donation_value_php
    text follower_count_at_post
    text watch_time_seconds
    text avg_view_duration_seconds
    text subscriber_count_at_post
    text forwards
  }

  supporters {
    text supporter_id PK
    text supporter_type
    text display_name
    text organization_name
    text first_name
    text last_name
    text relationship_type
    text region
    text country
    text email
    text phone
    text status
    text created_at
    text first_donation_date
    text acquisition_channel
  }
